tests/invalid/field_empty_list_wrong_type/main.py
class Foo:
    x: int
    def __init__(self) -> None:
        self.x = []
